--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
   shelf_proxy: ^1.0.4
   pdf: ^3.11.3
   printing: ^5.14.2
+  fl_chart: ^1.1.1
 
 dev_dependencies:
   flutter_test:
